Adds working plone.app.events buildout (except for ical output)

--- a/buildouts/buildout.cfg
+++ b/buildouts/buildout.cfg
@@ -15,10 +15,14 @@ versions = versions
 eggs =
     Pillow
     Plone
+    Products.ATContentTypes
     plone.app.dexterity
-    seantis.dir.base
+    plone.app.event[ploneintegration, dexterity]
+    plone.formwidget.recurrence[z3cform]
+    plone.formwidget.datetime[z3cform]
+    icalendar
+    seantis.dir.base  
     seantis.dir.events
-    zc.recipe.egg
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -26,7 +30,7 @@ eggs =
     ${plone:eggs}
     ${buildout:eggs}
 products = 
-zcml =
+zcml = plone.app.event
 environment-vars = 
     zope_i18n_compile_mo_files true
 
