--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -9,7 +9,8 @@ develop = ./src/*
 auto-checkout = *
 
 [sources]
-seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git
+seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
+seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
 sauna.reload = git git://github.com/epeli/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git git://github.com/collective/collective.geo.contentlocations
@@ -17,6 +18,14 @@ collective.geo.settings = git git://github.com/collective/collective.geo.setting
 collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwidget
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
 collective.geo.kml = git git://github.com/collective/collective.geo.kml
+
+Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes
+plone.app.event = git git://github.com/collective/plone.app.event.git
+plone.app.portlets = git git://github.com/plone/plone.app.portlets.git
+plone.event = git git://github.com/collective/plone.event.git
+plone.formwidget.recurrence = git git://github.com/collective/plone.formwidget.recurrence.git
+plone.formwidget.datetime = git git://github.com/collective/plone.formwidget.datetime.git
+icalendar = git git://github.com/collective/icalendar.git
 
 [instance]
 http-address = 8080
