Fixes tests buildout and changes category list call

--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -5,6 +5,7 @@ extensions +=
 parts +=
     omelette
     test
+    zopepy
 develop = ./src/*
 auto-checkout = *
 
@@ -46,9 +47,20 @@ environment-vars +=
 recipe = collective.recipe.omelette
 eggs = ${plone:eggs}
 
+[testenv]
+APP_PATH = ${buildout:directory}
+
 [test]
 recipe = zc.recipe.testrunner
-eggs = 
+eggs =
+    Pillow
     seantis.dir.base
     seantis.dir.events
 defaults = ['--auto-color', '--auto-progress']
+environment = testenv
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${test:eggs}
+interpreter = zopepy
+scripts = zopepy
