--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -10,7 +10,7 @@ develop = ./src/*
 auto-checkout = *
 
 [sources]
-seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
+seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git branch=events
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
 sauna.reload = git git://github.com/epeli/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
