Fixes tests not running with the current buildout

--- a/buildouts/buildout.cfg
+++ b/buildouts/buildout.cfg
@@ -17,7 +17,7 @@ eggs =
     Plone
     Products.ATContentTypes
     plone.app.dexterity
-    plone.app.event[ploneintegration, dexterity]
+    plone.app.event[dexterity]
     plone.formwidget.recurrence[z3cform]
     plone.formwidget.datetime[z3cform]
     icalendar
