--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -20,12 +20,13 @@ collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwid
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
 collective.geo.kml = git git://github.com/collective/collective.geo.kml
 
-Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes
+Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
 plone.app.event = git git://github.com/collective/plone.app.event.git
-plone.app.portlets = git git://github.com/plone/plone.app.portlets.git
+plone.app.eventindex = git git://github.com/regebro/plone.app.eventindex.git
+plone.app.portlets = git git://github.com/plone/plone.app.portlets.git branch=plip10886-event-improvements
 plone.event = git git://github.com/collective/plone.event.git
 plone.formwidget.recurrence = git git://github.com/collective/plone.formwidget.recurrence.git
-plone.formwidget.datetime = git git://github.com/collective/plone.formwidget.datetime.git
+plone.formwidget.datetime = git git@github.com:seantis/plone.formwidget.datetime.git
 icalendar = git git://github.com/collective/icalendar.git
 
 [instance]
@@ -41,7 +42,7 @@ zope-conf-additional +=
     %import sauna.reload
 
 environment-vars += 
-    RELOAD_PATH src/seantis.dir.base:src/seantis.dir.events
+    RELOAD_PATH src
 
 [omelette]
 recipe = collective.recipe.omelette
