Updates git urls to match the moves from collective to plone

--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -12,7 +12,7 @@ auto-checkout = *
 [sources]
 seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git branch=events
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
-sauna.reload = git git://github.com/epeli/sauna.reload.git
+sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git git://github.com/collective/collective.geo.contentlocations
 collective.geo.settings = git git://github.com/collective/collective.geo.settings
@@ -21,13 +21,12 @@ collective.geo.openlayers = git git://github.com/collective/collective.geo.openl
 collective.geo.kml = git git://github.com/collective/collective.geo.kml
 
 Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
-plone.app.event = git git://github.com/collective/plone.app.event.git
+plone.app.event = git git://github.com/plone/plone.app.event.git
 plone.app.eventindex = git git://github.com/regebro/plone.app.eventindex.git
 plone.app.portlets = git git://github.com/plone/plone.app.portlets.git branch=plip10886-event-improvements
-plone.event = git git://github.com/collective/plone.event.git
-plone.formwidget.recurrence = git git://github.com/collective/plone.formwidget.recurrence.git
-plone.formwidget.datetime = git git@github.com:seantis/plone.formwidget.datetime.git
-icalendar = git git://github.com/collective/icalendar.git
+plone.event = git git://github.com/plone/plone.event.git
+plone.formwidget.recurrence = git git://github.com/plone/plone.formwidget.recurrence.git
+plone.formwidget.datetime = git git://github.com/plone/plone.formwidget.datetime.git
 
 [instance]
 http-address = 8080
@@ -42,7 +41,7 @@ zope-conf-additional +=
     %import sauna.reload
 
 environment-vars += 
-    RELOAD_PATH src
+    RELOAD_PATH src/seantis.dir.base:src/seantis.dir.events
 
 [omelette]
 recipe = collective.recipe.omelette
