--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -14,9 +14,9 @@ seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git branch=events
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
-collective.geo.contentlocations = git git://github.com/collective/collective.geo.contentlocations
+collective.geo.contentlocations = git git@github.com:seantis/collective.geo.contentlocations.git
 collective.geo.settings = git git://github.com/collective/collective.geo.settings
-collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwidget
+collective.geo.mapwidget = git git@github.com:seantis/collective.geo.mapwidget.git
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
 collective.geo.kml = git git://github.com/collective/collective.geo.kml
 
