Adds more links to specific forks for the mapwidget loading problem

--- a/buildouts/develop.cfg
+++ b/buildouts/develop.cfg
@@ -18,7 +18,8 @@ collective.geo.contentlocations = git git@github.com:seantis/collective.geo.cont
 collective.geo.settings = git git://github.com/collective/collective.geo.settings
 collective.geo.mapwidget = git git@github.com:seantis/collective.geo.mapwidget.git
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
-collective.geo.kml = git git://github.com/collective/collective.geo.kml
+collective.geo.kml = git git@github.com:seantis/collective.geo.kml.git
+collective.z3cform.mapwidget = git git@github.com:seantis/collective.z3cform.mapwidget.git
 
 Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
 plone.app.event = git git://github.com/plone/plone.app.event.git
