--- a/buildouts/buildout.cfg
+++ b/buildouts/buildout.cfg
@@ -1,14 +1,16 @@
 [buildout]
 extensions = buildout.bootstrap
 extends = 
-    http://dist.plone.org/release/4.2/versions.cfg
+    http://dist.plone.org/release/4.2.1/versions.cfg
     versions.cfg
+    sources.cfg
 extends-cache = .
 find-links = 
     http://dist.plone.org/thirdparty/
 parts =
     instance
     i18ndude
+    test
 versions = versions
 
 [plone]
@@ -23,6 +25,7 @@ eggs =
     icalendar
     seantis.dir.base  
     seantis.dir.events
+    collective.z3cform.chosen
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -38,3 +41,13 @@ environment-vars =
 unzip = true
 recipe = zc.recipe.egg
 eggs = i18ndude
+
+[testenv]
+APP_PATH = ${buildout:directory}
+
+[test]
+recipe = zc.recipe.testrunner
+eggs =
+    seantis.dir.events [test]
+defaults = ['--auto-color', '--auto-progress']
+environment = testenv
