Adds bootstrap.py to buildout

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
-extensions = buildout.bootstrap
+extensions = 
+    buildout.bootstrap
+    mr.developer
 extends = 
     http://dist.plone.org/release/4.2.1/versions.cfg
     versions.cfg
