Move some stuff to from develop.cfg to buildout.cfg

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -2,17 +2,24 @@
 extensions = 
     buildout.bootstrap
     mr.developer
+
+develop = ./src/*
+auto-checkout = *
+
 extends = 
     http://dist.plone.org/release/4.2.1/versions.cfg
     versions.cfg
     sources.cfg
+
 extends-cache = .
 find-links = 
     http://dist.plone.org/thirdparty/
+
 parts =
     instance
     i18ndude
     test
+    
 versions = versions
 
 [plone]
@@ -50,6 +57,6 @@ APP_PATH = ${buildout:directory}
 [test]
 recipe = zc.recipe.testrunner
 eggs =
-    seantis.dir.events [test]
+    ${plone:eggs}
 defaults = ['--auto-color', '--auto-progress']
 environment = testenv
