--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -17,3 +17,22 @@ recipe = collective.recipe.cmd
 on_install = true
 cmds = tar jxvf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
+[sources]
+seantis.dir.base = git https://github.com/seantis/seantis.dir.base.git branch=events
+seantis.dir.events = git https://github.com/seantis/seantis.dir.events.git
+sauna.reload = git https://github.com/collective/sauna.reload.git
+collective.geo.geographer = git https://github.com/collective/collective.geo.geographer
+collective.geo.contentlocations = git https://github.com/seantis/collective.geo.contentlocations.git
+collective.geo.settings = git https://github.com/collective/collective.geo.settings
+collective.geo.mapwidget = git https://github.com/seantis/collective.geo.mapwidget.git
+collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers
+collective.geo.kml = git https://github.com/seantis/collective.geo.kml.git
+collective.z3cform.mapwidget = git https://github.com/seantis/collective.z3cform.mapwidget.git
+
+Products.ATContentTypes = git https://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
+plone.app.event = git https://github.com/plone/plone.app.event.git
+plone.app.eventindex = git https://github.com/regebro/plone.app.eventindex.git
+plone.app.portlets = git https://github.com/plone/plone.app.portlets.git branch=plip10886-event-improvements
+plone.event = git https://github.com/plone/plone.event.git
+plone.formwidget.recurrence = git https://github.com/plone/plone.formwidget.recurrence.git
+plone.formwidget.datetime = git https://github.com/plone/plone.formwidget.datetime.git
