Pin zc.buildout

--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -8,6 +8,16 @@ parts =
 eggs-directory = buildout-cache/eggs
 download-cache = buildout-cache/downloads
 
+# network speedup
+socket-timeout = 3
+allow-hosts =
+    *.plone.org
+    *.python.org
+    *.zope.org
+    docutils.sourceforge.net
+    effbot.org
+    prdownloads.sourceforge.net
+
 [download]
 recipe = hexagonit.recipe.download
 url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstaller.tgz
