--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -2,7 +2,6 @@
 extends = buildout.cfg
 parts +=
     omelette
-    test
     zopepy
 
 [instance]
@@ -10,8 +9,7 @@ http-address = 8080
 debug-mode = on
 verbose-security = on
 user = admin:admin
-eggs = 
-    ${plone:eggs}
+eggs +=
     sauna.reload
 
 zope-conf-additional += 
