--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
     - mkdir -p buildout-cache/downloads
     - python bootstrap.py -c travis.cfg
     - bin/buildout -N -t 3 -c travis.cfg
-script: bin/test -s seantis.dir.events
+script: bin/test -s seantis.dir
