Adds m2crypto link to travis allowed hosts

--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -17,6 +17,7 @@ allow-hosts =
     docutils.sourceforge.net
     effbot.org
     prdownloads.sourceforge.net
+    chandlerproject.org
 
 [download]
 recipe = hexagonit.recipe.download
