Switches to seantis.dir.base master branch

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,5 +1,5 @@
 [sources]
-seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git branch=events
+seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
