Adds izug bsetheme to develop buildout

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,6 +1,7 @@
 [sources]
 seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
+izug.seantis.dir.events = git git@github.com:seantis/izug.seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git git@github.com:seantis/collective.geo.contentlocations.git
@@ -17,3 +18,7 @@ plone.app.portlets = git git://github.com/plone/plone.app.portlets.git branch=pl
 plone.event = git git://github.com/plone/plone.event.git
 plone.formwidget.recurrence = git git://github.com/plone/plone.formwidget.recurrence.git
 plone.formwidget.datetime = git git://github.com/plone/plone.formwidget.datetime.git
+
+izug.basetheme = git git://github.com/4teamwork/izug.basetheme
+ftw.contentmenu = git git://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
+collective.geo.zugmap = git git@github.com:seantis/collective.geo.zugmap.git
