--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -11,12 +11,13 @@ verbose-security = on
 user = admin:admin
 eggs +=
     sauna.reload
-
+    izug.seantis.dir.events
+    
 zope-conf-additional += 
     %import sauna.reload
 
 environment-vars += 
-    RELOAD_PATH src/seantis.dir.base:src/seantis.dir.events
+    RELOAD_PATH src/seantis.dir.base:src/seantis.dir.events:src/izug.seantis.dir.events
 
 [omelette]
 recipe = collective.recipe.omelette
