--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -28,8 +28,9 @@ on_install = true
 cmds = tar jxvf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
 [sources]
-seantis.dir.base = git https://github.com/seantis/seantis.dir.base.git branch=events
+seantis.dir.base = git https://github.com/seantis/seantis.dir.base.git
 seantis.dir.events = git https://github.com/seantis/seantis.dir.events.git
+izug.seantis.dir.events = git https://github.com/seantis/izug.seantis.dir.events.git
 sauna.reload = git https://github.com/collective/sauna.reload.git
 collective.geo.geographer = git https://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git https://github.com/seantis/collective.geo.contentlocations.git
@@ -46,3 +47,7 @@ plone.app.portlets = git https://github.com/plone/plone.app.portlets.git branch=
 plone.event = git https://github.com/plone/plone.event.git
 plone.formwidget.recurrence = git https://github.com/plone/plone.formwidget.recurrence.git
 plone.formwidget.datetime = git https://github.com/plone/plone.formwidget.datetime.git
+
+izug.basetheme = git https://github.com/4teamwork/izug.basetheme
+ftw.contentmenu = git https://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
+collective.geo.zugmap = https git@github.com:seantis/collective.geo.zugmap.git
