Another stab at fixing the sources for travis

--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -32,11 +32,11 @@ seantis.dir.base = git https://github.com/seantis/seantis.dir.base.git
 seantis.dir.events = git https://github.com/seantis/seantis.dir.events.git
 izug.seantis.dir.events = git https://github.com/seantis/izug.seantis.dir.events.git
 sauna.reload = git https://github.com/collective/sauna.reload.git
-collective.geo.geographer = git https://github.com/collective/collective.geo.geographer
+collective.geo.geographer = git https://github.com/collective/collective.geo.geographer.git
 collective.geo.contentlocations = git https://github.com/seantis/collective.geo.contentlocations.git
 collective.geo.settings = git https://github.com/collective/collective.geo.settings
 collective.geo.mapwidget = git https://github.com/seantis/collective.geo.mapwidget.git
-collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers
+collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers.git
 collective.geo.kml = git https://github.com/seantis/collective.geo.kml.git
 collective.z3cform.mapwidget = git https://github.com/seantis/collective.z3cform.mapwidget.git
 
@@ -48,6 +48,6 @@ plone.event = git https://github.com/plone/plone.event.git
 plone.formwidget.recurrence = git https://github.com/plone/plone.formwidget.recurrence.git
 plone.formwidget.datetime = git https://github.com/plone/plone.formwidget.datetime.git
 
-izug.basetheme = git https://github.com/4teamwork/izug.basetheme
+izug.basetheme = git https://github.com/4teamwork/izug.basetheme.git
 ftw.contentmenu = git https://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
-collective.geo.zugmap = https git@github.com:seantis/collective.geo.zugmap.git
+collective.geo.zugmap = git https://github.com/seantis/collective.geo.zugmap.git
