Adds zugmap to buildout

--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -12,7 +12,8 @@ user = admin:admin
 eggs +=
     sauna.reload
     izug.seantis.dir.events
-    
+    collective.geo.zugmap    
+
 zope-conf-additional += 
     %import sauna.reload
 
