Use special class for navigation links

--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -22,7 +22,7 @@ environment-vars +=
 
 [omelette]
 recipe = collective.recipe.omelette
-eggs = ${plone:eggs}
+eggs = ${instance:eggs}
 
 [zopepy]
 recipe = zc.recipe.egg
