Updates collective geo mapwidget source

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -6,7 +6,7 @@ sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git git@github.com:seantis/collective.geo.contentlocations.git
 collective.geo.settings = git git://github.com/collective/collective.geo.settings
-collective.geo.mapwidget = git git@github.com:seantis/collective.geo.mapwidget.git
+collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwidget.git
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
 collective.geo.kml = git git@github.com:seantis/collective.geo.kml.git
 collective.z3cform.mapwidget = git git@github.com:seantis/collective.z3cform.mapwidget.git
