Updates allow host for travis

--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -17,6 +17,7 @@ allow-hosts =
     docutils.sourceforge.net
     effbot.org
     prdownloads.sourceforge.net
+    *.github.com
 
 [download]
 recipe = hexagonit.recipe.download
