Updates buildouts with vbeo links

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -2,14 +2,16 @@
 seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
 seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
 izug.seantis.dir.events = git git@github.com:seantis/izug.seantis.dir.events.git
+vbeo.seantis.dir.events = git git@github.com:seantis/vbeo.seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
 collective.geo.geographer = git git://github.com/collective/collective.geo.geographer
 collective.geo.contentlocations = git git@github.com:seantis/collective.geo.contentlocations.git
 collective.geo.settings = git git://github.com/collective/collective.geo.settings
-collective.geo.mapwidget = git git://github.com/collective/collective.geo.mapwidget.git
+collective.geo.mapwidget = git git@github.com:seantis/collective.geo.mapwidget.git
 collective.geo.openlayers = git git://github.com/collective/collective.geo.openlayers
 collective.geo.kml = git git@github.com:seantis/collective.geo.kml.git
 collective.z3cform.mapwidget = git git@github.com:seantis/collective.z3cform.mapwidget.git
+plone.app.eventindex = git://github.com/regebro/plone.app.eventindex.git
 
 Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
 plone.app.event = git git://github.com/plone/plone.app.event.git
@@ -19,6 +21,6 @@ plone.event = git git://github.com/plone/plone.event.git
 plone.formwidget.recurrence = git git://github.com/plone/plone.formwidget.recurrence.git
 plone.formwidget.datetime = git git://github.com/plone/plone.formwidget.datetime.git
 
-izug.basetheme = git git://github.com/4teamwork/izug.basetheme
+izug.basetheme = git git@github.com:seantis/izug.basetheme
 ftw.contentmenu = git git://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
 collective.geo.zugmap = git git@github.com:seantis/collective.geo.zugmap.git
