--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -32,6 +32,7 @@ cmds = tar jxvf ${download:location}/Plone-4.2.2-UnifiedInstaller/packages/build
 seantis.dir.base = git https://github.com/seantis/seantis.dir.base.git
 seantis.dir.events = git https://github.com/seantis/seantis.dir.events.git
 izug.seantis.dir.events = git https://github.com/seantis/izug.seantis.dir.events.git
+vbeo.seantis.dir.events = git https://github.com/seantis/vbeo.seantis.dir.events.git
 sauna.reload = git https://github.com/collective/sauna.reload.git
 collective.geo.geographer = git https://github.com/collective/collective.geo.geographer.git
 collective.geo.contentlocations = git https://github.com/seantis/collective.geo.contentlocations.git
