Use latest version of ftw.contentmenu

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -22,5 +22,5 @@ plone.formwidget.recurrence = git git://github.com/plone/plone.formwidget.recurr
 plone.formwidget.datetime = git git://github.com/plone/plone.formwidget.datetime.git
 
 izug.basetheme = git git@github.com:seantis/izug.basetheme
-ftw.contentmenu = git git://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
+ftw.contentmenu = git git://github.com/4teamwork/ftw.contentmenu.git
 collective.geo.zugmap = git git@github.com:seantis/collective.geo.zugmap.git
