--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -51,5 +51,5 @@ plone.formwidget.recurrence = git https://github.com/plone/plone.formwidget.recu
 plone.formwidget.datetime = git https://github.com/plone/plone.formwidget.datetime.git
 
 izug.basetheme = git https://github.com/4teamwork/izug.basetheme.git
-ftw.contentmenu = git https://github.com/4teamwork/ftw.contentmenu.git rev=682f447c43
+ftw.contentmenu = git https://github.com/4teamwork/ftw.contentmenu.git
 collective.geo.zugmap = git https://github.com/seantis/collective.geo.zugmap.git
