Pin plone.app.event revision to one before dependency on icalendar>=3.3 (which does not yet exist) has been declared.

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -8,7 +8,7 @@ collective.z3cform.mapwidget = git git@github.com:seantis/collective.z3cform.map
 plone.app.eventindex = git://github.com/regebro/plone.app.eventindex.git
 
 Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
-plone.app.event = git git://github.com/plone/plone.app.event.git
+plone.app.event = git git://github.com/plone/plone.app.event.git rev=5b3ca17685483c3cb75a39f04f77d5af2b4168af
 plone.app.eventindex = git git://github.com/regebro/plone.app.eventindex.git
 plone.app.portlets = git git://github.com/plone/plone.app.portlets.git branch=plip10886-event-improvements
 plone.event = git git://github.com/plone/plone.event.git
