Use public (read-only) git repositories.

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,10 +1,10 @@
 [sources]
-seantis.dir.base = git git@github.com:seantis/seantis.dir.base.git
-seantis.dir.events = git git@github.com:seantis/seantis.dir.events.git
-izug.seantis.dir.events = git git@github.com:seantis/izug.seantis.dir.events.git
-vbeo.seantis.dir.events = git git@github.com:seantis/vbeo.seantis.dir.events.git
+seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git
+seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git
+izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.git
+vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
-collective.z3cform.mapwidget = git git@github.com:seantis/collective.z3cform.mapwidget.git
+collective.z3cform.mapwidget = git git://github.com/seantis/collective.z3cform.mapwidget.git
 plone.app.eventindex = git://github.com/regebro/plone.app.eventindex.git
 
 Products.ATContentTypes = git git://github.com/plone/Products.ATContentTypes branch=plip10886-event-improvements
@@ -15,6 +15,6 @@ plone.event = git git://github.com/plone/plone.event.git
 plone.formwidget.recurrence = git git://github.com/plone/plone.formwidget.recurrence.git
 plone.formwidget.datetime = git git://github.com/plone/plone.formwidget.datetime.git
 
-izug.basetheme = git git@github.com:seantis/izug.basetheme
+izug.basetheme = git git://github.com/seantis/izug.basetheme
 ftw.contentmenu = git git://github.com/4teamwork/ftw.contentmenu.git
-collective.geo.zugmap = git git@github.com:seantis/collective.geo.zugmap.git
+collective.geo.zugmap = git git://github.com/seantis/collective.geo.zugmap.git
