Reworks events index into different classes

--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -15,7 +15,10 @@ eggs +=
     collective.geo.zugmap
 
 environment-vars += 
-    RELOAD_PATH src/seantis.dir.base:src/seantis.dir.events:src/izug.seantis.dir.events
+    PROFILE_PUBLISHER 1
+
+zope-conf-additional =
+    publisher-profile-file ${buildout:directory}/profile.dat
 
 [omelette]
 recipe = collective.recipe.omelette
