Use index branch in sources.cfg for travis

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,6 +1,6 @@
 [sources]
 seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git
-seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git
+seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git branch=index
 izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.git
 vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git
 sauna.reload = git git://github.com/collective/sauna.reload.git
