Reorganizes buildout files

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -1,63 +1,37 @@
 [buildout]
-extensions = 
-    buildout.bootstrap
+extensions =
     mr.developer
+    buildout.dumppickedversions
 
 develop =
-    .
     ./src/*
 auto-checkout = *
 
 extends = 
-    http://dist.plone.org/release/4.2.2/versions.cfg
+    http://dist.plone.org/release/4.3/versions.cfg
     versions.cfg
     sources.cfg
 
-extends-cache = .
-find-links = 
-    http://dist.plone.org/thirdparty/
+find-links = http://dist.plone.org/thirdparty/
 
 parts =
     instance
     i18ndude
-    test
 
 versions = versions
 
-[plone]
-eggs =
-    Pillow
-    Plone
-    Products.ATContentTypes
-    plone.app.dexterity
-    plone.app.event[dexterity]
-    plone.formwidget.recurrence[z3cform]
-    plone.formwidget.datetime[z3cform]
-    icalendar
-    seantis.dir.base  
-    seantis.dir.events
-    collective.z3cform.chosen
+package-name = seantis.dir.events
 
 [instance]
 recipe = plone.recipe.zope2instance
+environment-vars = zope_i18n_compile_mo_files true
 eggs = 
-    ${plone:eggs}
-products = 
-zcml = plone.app.event
-environment-vars = 
-    zope_i18n_compile_mo_files true
+    Pillow
+    Plone
+    plone.app.dexterity[grok, relations]
+    seantis.dir.events
 
 [i18ndude]
 unzip = true
 recipe = zc.recipe.egg
 eggs = i18ndude
-
-[testenv]
-APP_PATH = ${buildout:directory}
-
-[test]
-recipe = zc.recipe.testrunner
-eggs =
-    ${plone:eggs}
-defaults = ['--auto-color', '--auto-progress']
-environment = testenv
