--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -5,6 +5,10 @@ parts =
     install
     test
 
+develop =
+    .
+    ./src/*
+
 eggs-directory = buildout-cache/eggs
 download-cache = buildout-cache/downloads
 
