--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -3,6 +3,9 @@ extends = buildout.cfg
 parts +=
     omelette
     zopepy
+    test
+    coverage-test
+    coverage-report
 
 [instance]
 http-address = 8080
@@ -12,17 +15,30 @@ user = admin:admin
 eggs +=
     izug.seantis.dir.events
     vbeo.seantis.dir.events
-    collective.geo.zugmap
-
-environment-vars += 
-    PROFILE_PUBLISHER 1
-
-zope-conf-additional =
-    publisher-profile-file ${buildout:directory}/profile.dat
 
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
+
+[testenv]
+APP_PATH = ${buildout:directory}
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = ${instance:eggs}
+defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+environment = testenv
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
+
+[coverage-report]
+recipe = zc.recipe.egg
+eggs = z3c.coverage
+scripts = coveragereport
+arguments = ('coverage', 'report')
 
 [zopepy]
 recipe = zc.recipe.egg
