--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -1,3 +1,28 @@
 [versions]
-zc.buildout = 1.6.3
-icalendar = 3.3
+blist = 1.3.4
+collective.autopermission = 1.0b2
+collective.dexteritytextindexer = 2.0
+collective.elephantvocabulary = 0.2.2
+collective.geo.kml = 2.5
+collective.mtrsetup = 1.4.1
+ftw.contentmenu = 2.2.1
+functools32 = 3.2.3-1
+geopy = 0.95.1
+i18ndude = 3.2.2
+icalendar = 3.4
+isodate = 0.4.9
+mock = 1.0.1
+plone.app.event = 1.0b7
+plone.event = 1.0b3
+plone.formwidget.datetime = 1.0b4
+plone.formwidget.recurrence = 1.0b8
+Products.DateRecurringIndex = 2.0.1
+pygeoif = 0.3.1dev
+python-magic = 0.4.3
+pytz = 2013b
+xlrd = 0.9.2
+xlwt = 0.7.5
+z3c.jbot = 0.7.1
+z3c.unconfigure = 1.1
+zc.buildout = 1.7.1
+zope.configuration = 3.8.0
