--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -3,7 +3,12 @@ blist = 1.3.4
 collective.autopermission = 1.0b2
 collective.dexteritytextindexer = 2.0
 collective.elephantvocabulary = 0.2.2
+collective.geo.contentlocations = 2.5
+collective.geo.geographer = 1.7
 collective.geo.kml = 2.5
+collective.geo.mapwidget = 1.6
+collective.geo.openlayers = 2.5
+collective.geo.settings = 2.5
 collective.mtrsetup = 1.4.1
 ftw.contentmenu = 2.2.1
 functools32 = 3.2.3-1
@@ -20,6 +25,7 @@ Products.DateRecurringIndex = 2.0.1
 pygeoif = 0.3.1dev
 python-magic = 0.4.3
 pytz = 2013b
+seantis.dir.base = 1.5.1
 xlrd = 0.9.2
 xlwt = 0.7.5
 z3c.jbot = 0.7.1
