--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -4,6 +4,9 @@ izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.g
 vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git pushurl=git@github.com:seantis/vbeo.seantis.dir.events.git
 collective.geo.zugmap = git git://github.com/seantis/collective.geo.zugmap.git pushurl=git@github.com:seantis/collective.geo.zugmap.git
 
+# irrelevant once seantis.dir.base 1.5.2 is out
+seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git pushurl=git@github.com:seantis/seantis.dir.base.git
+
 # fork, unreleased
 izug.basetheme = git git://github.com/seantis/izug.basetheme.git pushurl=git@github.com:seantis/izug.basetheme.git
 
