Use collective.betterbrowser for tests

--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -3,6 +3,8 @@
 izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.git pushurl=git@github.com:seantis/izug.seantis.dir.events.git
 vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git pushurl=git@github.com:seantis/vbeo.seantis.dir.events.git
 collective.geo.zugmap = git git://github.com/seantis/collective.geo.zugmap.git pushurl=git@github.com:seantis/collective.geo.zugmap.git
+collective.betterbrowser = git git://github.com/collective/collective.betterbrowser.git pushurl=git@github.com:collective/collective.betterbrowser.git
+seantis.templates = git git://github.com/seantis/seantis.templates.git
 
 # irrelevant once seantis.dir.base 1.5.2 is out
 seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git pushurl=git@github.com:seantis/seantis.dir.base.git
