Moves test definition to buildout.cfg

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -29,9 +29,16 @@ eggs =
     Pillow
     Plone
     plone.app.dexterity[grok, relations]
+    seantis.dir.base
     seantis.dir.events
 
 [i18ndude]
 unzip = true
 recipe = zc.recipe.egg
 eggs = i18ndude
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = ${instance:eggs}
+defaults = ['--auto-color', '--auto-progress']
+environment = testenv
