Fix Plone installer link in travis.cfg

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -29,7 +29,6 @@ eggs =
     Pillow
     Plone
     plone.app.dexterity[grok, relations]
-    seantis.dir.base
     seantis.dir.events
 
 [i18ndude]
@@ -39,6 +38,8 @@ eggs = i18ndude
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = ${instance:eggs}
+eggs =
+    seantis.dir.base[tests]
+    seantis.dir.events
 defaults = ['--auto-color', '--auto-progress']
 environment = testenv
