Move testenv to buildout.cfg

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -36,6 +36,9 @@ unzip = true
 recipe = zc.recipe.egg
 eggs = i18ndude
 
+[testenv]
+APP_PATH = ${buildout:directory}
+
 [test]
 recipe = zc.recipe.testrunner
 eggs =
