--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -10,6 +10,7 @@ collective.geo.mapwidget = 1.6
 collective.geo.openlayers = 2.5
 collective.geo.settings = 2.5
 collective.mtrsetup = 1.4.1
+cssselect = 0.8
 ftw.contentmenu = 2.2.1
 functools32 = 3.2.3-1
 geopy = 0.95.1
@@ -23,9 +24,10 @@ plone.formwidget.datetime = 1.0b4
 plone.formwidget.recurrence = 1.0b8
 Products.DateRecurringIndex = 2.0.1
 pygeoif = 0.3.1dev
+pyquery = 1.2.4
 python-magic = 0.4.3
 pytz = 2013b
-seantis.dir.base = 1.5.1
+seantis.dir.base = 1.5.2
 xlrd = 0.9.2
 xlwt = 0.7.5
 z3c.jbot = 0.7.1
