Adds seantis.dir sources and debugtoolbar to buildout

--- a/buildout/develop.cfg
+++ b/buildout/develop.cfg
@@ -15,6 +15,7 @@ user = admin:admin
 eggs +=
     izug.seantis.dir.events
     vbeo.seantis.dir.events
+    plone.app.debugtoolbar
 
 [omelette]
 recipe = collective.recipe.omelette
