Upgrade to plone.app.event 1.0rc1

--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -18,7 +18,7 @@ i18ndude = 3.2.2
 icalendar = 3.4
 isodate = 0.4.9
 mock = 1.0.1
-plone.app.event = 1.0b7
+plone.app.event = 1.0rc1
 plone.event = 1.0b3
 plone.formwidget.datetime = 1.0b4
 plone.formwidget.recurrence = 1.0b8
