--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -43,6 +43,6 @@ APP_PATH = ${buildout:directory}
 recipe = zc.recipe.testrunner
 eggs =
     seantis.dir.base[tests]
-    seantis.dir.events
+    seantis.dir.events[tests]
 defaults = ['--auto-color', '--auto-progress']
 environment = testenv
