--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -1,6 +1,8 @@
 [versions]
+Beaker = 1.6.4
 blist = 1.3.4
 collective.autopermission = 1.0b2
+collective.beaker = 1.0b3
 collective.dexteritytextindexer = 2.0
 collective.elephantvocabulary = 0.2.2
 collective.geo.contentlocations = 2.5
@@ -18,14 +20,18 @@ i18ndude = 3.2.2
 icalendar = 3.4
 isodate = 0.4.9
 mock = 1.0.1
+persistent = 4.0.6
+plone.app.debugtoolbar = 1.0a3
 plone.app.event = 1.0rc1
 plone.event = 1.0b3
 plone.formwidget.datetime = 1.0b4
-plone.formwidget.recurrence = 1.0b8
+plone.formwidget.recurrence = 1.0b9
+Products.BeakerSessionDataManager = 1.1
 Products.DateRecurringIndex = 2.0.1
 pygeoif = 0.3.1dev
 pyquery = 1.2.4
 python-magic = 0.4.3
+python-memcached = 1.53
 pytz = 2013b
 seantis.dir.base = 1.5.2
 xlrd = 0.9.2
