Use latest releases of plone.event, icalender and plone.formwidget.datetime, fixing #1 and #2

--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -17,14 +17,14 @@ ftw.contentmenu = 2.2.1
 functools32 = 3.2.3-1
 geopy = 0.95.1
 i18ndude = 3.2.2
-icalendar = 3.4
+icalendar = 3.5
 isodate = 0.4.9
 mock = 1.0.1
 persistent = 4.0.6
 plone.app.debugtoolbar = 1.0a3
 plone.app.event = 1.0rc1
-plone.event = 1.0b3
-plone.formwidget.datetime = 1.0b4
+plone.event = 1.0rc1
+plone.formwidget.datetime = 1.0b5
 plone.formwidget.recurrence = 1.0b9
 Products.BeakerSessionDataManager = 1.1
 Products.DateRecurringIndex = 2.0.1
