--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -23,6 +23,7 @@ mock = 1.0.1
 persistent = 4.0.6
 plone.app.debugtoolbar = 1.0a3
 plone.app.event = 1.0rc2
+plone.autoform = 1.4
 plone.event = 1.0rc1
 plone.formwidget.datetime = 1.0b4
 plone.formwidget.recurrence = 1.0b9
