--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,6 +1,7 @@
 [sources]
 # unreleased
 seantis.dir.base = git git://github.com/seantis/seantis.dir.base.git pushurl=git@github.com:seantis/seantis.dir.base.git
+seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git pushurl=git@github.com:seantis/seantis.dir.events.git
 izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.git pushurl=git@github.com:seantis/izug.seantis.dir.events.git
 vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git pushurl=git@github.com:seantis/vbeo.seantis.dir.events.git
 collective.geo.zugmap = git git://github.com/seantis/collective.geo.zugmap.git pushurl=git@github.com:seantis/collective.geo.zugmap.git
