--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -3,41 +3,43 @@ Beaker = 1.6.4
 blist = 1.3.4
 collective.autopermission = 1.0b2
 collective.beaker = 1.0b3
+collective.betterbrowser = 0.4
 collective.dexteritytextindexer = 2.0
-collective.elephantvocabulary = 0.2.2
+collective.elephantvocabulary = 0.2.4
 collective.geo.contentlocations = 2.5
 collective.geo.geographer = 1.7
 collective.geo.kml = 2.5
 collective.geo.mapwidget = 1.6
 collective.geo.openlayers = 2.5
 collective.geo.settings = 2.5
-collective.mtrsetup = 1.4.1
-cssselect = 0.8
-ftw.contentmenu = 2.2.1
+collective.geo.zugmap = 1.0.2
+collective.mtrsetup = 1.5
+cssselect = 0.9.1
+ftw.contentmenu = 2.2.2
 functools32 = 3.2.3-1
 geopy = 0.95.1
-i18ndude = 3.2.2
+i18ndude = 3.3.1
 icalendar = 3.5
 isodate = 0.4.9
 mock = 1.0.1
 persistent = 4.0.6
 plone.app.debugtoolbar = 1.0a3
-plone.app.event = 1.0rc3
-plone.autoform = 1.4
-plone.event = 1.0rc1
-plone.formwidget.datetime = 1.0b6
-plone.formwidget.recurrence = 1.0b11
+plone.app.event = 1.0.3
+plone.autoform = 1.5
+plone.event = 1.0
+plone.formwidget.datetime = 1.0
+plone.formwidget.recurrence = 1.1
 Products.BeakerSessionDataManager = 1.1
 Products.DateRecurringIndex = 2.0.1
-pygeoif = 0.3.1dev
-pyquery = 1.2.4
-python-magic = 0.4.3
+pygeoif = 0.4.1
+pyquery = 1.2.6
+python-magic = 0.4.6
 python-memcached = 1.53
-pytz = 2013b
+pytz = 2013.8
 seantis.dir.base = 1.6
 xlrd = 0.9.2
 xlwt = 0.7.5
 z3c.jbot = 0.7.1
 z3c.unconfigure = 1.1
 zc.buildout = 1.7.1
-zope.configuration = 3.8.0
+zope.configuration = 3.8.1
