Update package versions for seantis.dir.base 1.7

--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -6,14 +6,16 @@ collective.beaker = 1.0b3
 collective.betterbrowser = 0.4
 collective.dexteritytextindexer = 2.0
 collective.elephantvocabulary = 0.2.4
-collective.geo.contentlocations = 2.5
-collective.geo.geographer = 1.7
-collective.geo.kml = 2.5
-collective.geo.mapwidget = 1.6
-collective.geo.openlayers = 2.5
-collective.geo.settings = 2.5
+collective.geo.behaviour = 1.0
+collective.geo.contentlocations = 3.0
+collective.geo.geographer = 2.0
+collective.geo.kml = 3.1
+collective.geo.mapwidget = 2.0
+collective.geo.openlayers = 3.0
+collective.geo.settings = 3.0
 collective.geo.zugmap = 1.0.2
 collective.mtrsetup = 1.5
+collective.z3cform.mapwidget = 2.0
 cssselect = 0.9.1
 ftw.contentmenu = 2.2.2
 functools32 = 3.2.3-1
@@ -36,7 +38,7 @@ pyquery = 1.2.6
 python-magic = 0.4.6
 python-memcached = 1.53
 pytz = 2013.8
-seantis.dir.base = 1.6
+seantis.dir.base = 1.7
 xlrd = 0.9.2
 xlwt = 0.7.5
 z3c.jbot = 0.7.1
