--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -1,5 +1,6 @@
 [versions]
 Beaker = 1.6.4
+BeautifulSoup = 3.2.1
 blist = 1.3.4
 collective.autopermission = 1.0b2
 collective.beaker = 1.0b3
@@ -14,7 +15,9 @@ collective.geo.mapwidget = 2.0
 collective.geo.openlayers = 3.0
 collective.geo.settings = 3.0
 collective.geo.zugmap = 1.0.2
+collective.js.underscore = 1.5.0
 collective.mtrsetup = 1.5
+collective.z3cform.colorpicker = 1.1
 collective.z3cform.mapwidget = 2.0
 cssselect = 0.9.1
 ftw.contentmenu = 2.2.2
