--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -7,3 +7,6 @@ seantis.templates = git git://github.com/seantis/seantis.templates.git
 
 # fork, unreleased
 izug.basetheme = git git://github.com/seantis/izug.basetheme.git pushurl=git@github.com:seantis/izug.basetheme.git
+
+# Adds missing translations, expected to be unnecessary with 1.2
+plone.formwidget.recurrence = git git://github.com/seantis/plone.formwidget.recurrence.git pushurl=git@github.com:seantis/plone.formwidget.recurrence.git
