--- a/buildout/sources.cfg
+++ b/buildout/sources.cfg
@@ -1,6 +1,6 @@
 [sources]
 # unreleased
-seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git pushurl=git@github.com:seantis/seantis.dir.events.git
+# seantis.dir.events = git git://github.com/seantis/seantis.dir.events.git pushurl=git@github.com:seantis/seantis.dir.events.git
 # izug.seantis.dir.events = git git://github.com/seantis/izug.seantis.dir.events.git pushurl=git@github.com:seantis/izug.seantis.dir.events.git
 # vbeo.seantis.dir.events = git git://github.com/seantis/vbeo.seantis.dir.events.git pushurl=git@github.com:seantis/vbeo.seantis.dir.events.git
 
