Export as anonymous

--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -28,6 +28,7 @@ icalendar = 3.5
 isodate = 0.4.9
 mock = 1.0.1
 persistent = 4.0.6
+plone.api = 1.1.0
 plone.app.debugtoolbar = 1.0a3
 plone.app.event = 1.0.3
 plone.autoform = 1.5
