--- a/buildout/versions.cfg
+++ b/buildout/versions.cfg
@@ -11,8 +11,8 @@ collective.geo.behaviour = 1.0
 collective.geo.contentlocations = 3.0
 collective.geo.geographer = 2.0
 collective.geo.kml = 3.1
-collective.geo.mapwidget = 2.0
-collective.geo.openlayers = 3.0
+collective.geo.mapwidget = 2.1.3
+collective.geo.openlayers = 3.1
 collective.geo.settings = 3.0
 collective.geo.zugmap = 1.0.2
 collective.js.underscore = 1.5.0
@@ -22,26 +22,26 @@ collective.z3cform.mapwidget = 2.0
 cssselect = 0.9.1
 ftw.contentmenu = 2.2.2
 functools32 = 3.2.3-1
-geopy = 0.95.1
-i18ndude = 3.3.1
-icalendar = 3.5
+geopy = 1.4.0
+i18ndude = 3.3.3
+icalendar = 3.6.1
 isodate = 0.4.9
 mock = 1.0.1
 persistent = 4.0.6
 plone.app.debugtoolbar = 1.0a3
-plone.app.event = 1.0.3
-plone.autoform = 1.5
+plone.app.event = 1.0.4
+plone.autoform = 1.6
 plone.event = 1.0
 plone.formwidget.datetime = 1.0
 plone.formwidget.recurrence = 1.1
 Products.BeakerSessionDataManager = 1.1
 Products.DateRecurringIndex = 2.0.1
 pygeoif = 0.4.1
-pyquery = 1.2.6
+pyquery = 1.2.8
 python-magic = 0.4.6
 python-memcached = 1.53
-pytz = 2013.8
-seantis.dir.base = 1.7
+pytz = 2013b
+seantis.dir.base = 1.7.8
 xlrd = 0.9.2
 xlwt = 0.7.5
 z3c.jbot = 0.7.1
