--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 
 python: "2.7"
 
+before_install:
+    - pip install -U setuptools
+
 install:
     - cp buildout/* .
     - mkdir -p buildout-cache/eggs
